<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Loan Calculator</string>
    <string name="sumCred">Ammount of credit</string>
    <string name="period">Period of payments</string>
    <string name="percent">Interest rate %</string>
    <string name="dateButton">Date of the loan</string>
    <string name="anuitent">Annuity</string>
    <string name="different">Different payment</string>
    <string name="calculate">Calculate</string>
    <string name="title_activity_result">Sheduler payment</string>
    <string name="sumPay">Ammount of payment</string>
    <string name="sumProfit">Ammount of incom</string>
    <string name="bySumOfLoan">By sum of the loan</string>
    <string name="byAmmountOfPayment">By Ammount of payment</string>
    <string name="byAmmountIncome">On the amount of income</string>
    <string name="errMesSumCred">Amount is absent!</string>
    <string name="errMesNumPays">Number is empty</string>
    <string name="errMesPercent">Percent is empty!</string>
    <string name="errMesDateAmmount">Date of ammount is empty!</string>
    <string name="errMesSumPay">Payment sum is empty!</string>
    <string-array name="headerResult">
        <item>Number</item>
        <item>Pay Date</item>
        <item>Payment</item>
        <item>Interest</item>
        <item>Principal</item>
        <item>Remain</item>
    </string-array>
    <string name="mesCalculateOK">Done!</string>
    <string name="total">Total:</string>
    <string name="errMesSumIncom">Ammount of income is empty!</string>
    <string name="text_main">Calculations</string>
    <string name="toCalculate">Calculator</string>
    <string name="viewCalcs">List of calculations</string>
    <string name="makeCalc">Make calculation</string>
    <string-array name="loanType">
        <item>By sum of loan</item>
        <item>By ammount of payment</item>
        <item>By sum of profit</item>
    </string-array>
    <string-array name="calcTypes">
        <item>Sum of loan</item>
        <item>Ammount of payment</item>
        <item>Sum of profit</item>
    </string-array>
    <string name="errMesSum">Sum is empty!</string>
    <string-array name="header_list_of_calcs">
        <item>Sum</item>
        <item>Percent</item>
        <item>Date of loan</item>
        <item>Num of pays</item>
        <item>Loan type</item>
    </string-array>
    <string name="list_of_calcs_tv">List of calculations</string>
    <string name="refreshButton">Refresh</string>
    <string name="delete_button">Delete</string>
    <string name="date_of_issue">Date of issue</string>
    <string name="redemtion_date">Redemption Date</string>
    <string name="credit_type_tv">Loan type</string>
    <string name="calc_type_tv">Computation type</string>
    <string name="year">Years</string>
    <string name="month">Months</string>
    <string name="db_path">/data/data/calculator.ru/databases/</string>
    <string name="name_calc">Name of calculation</string>
    <string name="errMesNameCalc">Name of computation is empty!</string>
    <string name="period_list">Period of payments, months</string>
    <string name="payment_type">Payment type</string>
    <string name="watchButton">Show computation</string>
</resources>
