<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:stretchColumns="1" >

    <TableRow android:paddingBottom="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sumCred" />

        <EditText
            android:id="@+id/sumCred"
            android:layout_width="fill_parent"
            android:inputType="numberDecimal"
            android:maxLength="10" />
    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:paddingBottom="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period" />

        <EditText
            android:id="@+id/period"
            android:layout_width="fill_parent"
            android:inputType="number"
            android:maxLength="3" />
    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:paddingBottom="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent" />

        <EditText
            android:id="@+id/percent"
            android:layout_width="fill_parent"
            android:inputType="numberDecimal"
            android:maxLength="5" />
    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:paddingBottom="5dp" >

        <Button
            android:id="@+id/dateButton"
            android:text="@string/dateButton" 
            android:onClick="showDatePickerDialog"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:background="@drawable/date_field" >

            <TextView
                android:id="@+id/dateField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:paddingBottom="5dp" >

        <RadioGroup
            android:layout_width="fill_parent"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/anuitent"
                android:text="@string/anuitent" />

            <RadioButton
                android:id="@+id/different"
                android:text="@string/different" />
        </RadioGroup>

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="fill_parent"
            android:onClick="calculate"
            android:text="@string/calculate" />
    </TableRow>

</TableLayout>