<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D7C6C6"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/spiner_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/spinner_calc_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="left" />
    </LinearLayout>

    <EditText
        android:id="@+id/inputSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="numberDecimal"
        android:maxLength="10" />

    <!-- <LinearLayout -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:orientation="vertical" > -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#7CDCD0"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/period"
            android:inputType="number"
            android:maxLength="3" />
        <!-- </LinearLayout> -->

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/month_rad_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month" />

            <RadioButton
                android:id="@+id/year_rad_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/year" />
        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/percent"
        android:inputType="numberDecimal"
        android:maxLength="5" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#7CDCD0"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="getDate"
            android:text="@string/dateButton" />

        <TextView
            android:id="@+id/dateField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textIsSelectable="false" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/anuitent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anuitent" />

        <RadioButton
            android:id="@+id/different"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/different" />
    </RadioGroup>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="calculate"
        android:text="@string/calculate" />

</LinearLayout>