<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sumCred"
                android:textColor="#E9F327" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textColor="#E9F327" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_issue"
                android:textColor="#E9F327" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redemtion_date"
                android:textColor="#E9F327" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/period"
                android:textColor="#E9F327" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_type_tv"
                android:textColor="#E9F327" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_type_tv"
                android:textColor="#E9F327" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#88F634" />

            <TextView
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#88F634" />

            <TextView
                android:id="@+id/begin_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#88F634" />
            <TextView
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#88F634" />

            <TextView
                android:id="@+id/period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#88F634" />

            <TextView
                android:id="@+id/credit_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#88F634" />

            <TextView
                android:id="@+id/calc_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#88F634" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/chk_box"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>